--- a/views/admin/pre-add-admin.ejs
+++ b/views/admin/pre-add-admin.ejs
@@ -7,8 +7,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <title>Lockscreen Boxed | CORK - Multipurpose Bootstrap Dashboard Template </title>
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico" />
+    <title>
+        <%= currentUrl.split('/')[3].charAt(0).toUpperCase()+currentUrl.split('/')[3].slice(1,currentUrl.split('/')[3].length)
+            %>
+    </title>
+    <link rel="icon" type="image/x-icon" href="/hostel-files/logo/logo.png">
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
