--- a/views/admin/hash.ejs
+++ b/views/admin/hash.ejs
@@ -7,8 +7,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <title>Lockscreen Boxed | CORK - Multipurpose Bootstrap Dashboard Template </title>
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico" />
+    <title>
+        <%= currentUrl.split('/')[3].charAt(0).toUpperCase()+currentUrl.split('/')[3].slice(1,currentUrl.split('/')[3].length)
+            %>
+    </title>
+    <link rel="icon" type="image/x-icon" href="/hostel-files/logo/logo.png">
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -31,9 +34,37 @@
                         <%- include('../partials/flash/flash.ejs') %>
 
                             <div class="d-flex user-meta">
-                                <img src="/assets/img/profile-7.jpg" class="usr-profile" alt="avatar">
                                 <div class="">
-                                    <p class="">Shaun Park</p>
+                                    <% if (currentUser){ %>
+                                        <div class="d-flex user-meta">
+                                            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
+                                                width="60" height="60">
+                                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round"
+                                                    stroke-linejoin="round">
+                                                </g>
+                                                <g id="SVGRepo_iconCarrier">
+                                                    <path opacity="0.4"
+                                                        d="M12.1207 12.78C12.0507 12.77 11.9607 12.77 11.8807 12.78C10.1207 12.72 8.7207 11.28 8.7207 9.50998C8.7207 7.69998 10.1807 6.22998 12.0007 6.22998C13.8107 6.22998 15.2807 7.69998 15.2807 9.50998C15.2707 11.28 13.8807 12.72 12.1207 12.78Z"
+                                                        stroke="#292D32" stroke-width="1.5" stroke-linecap="round"
+                                                        stroke-linejoin="round"></path>
+                                                    <path opacity="0.34"
+                                                        d="M18.7398 19.3801C16.9598 21.0101 14.5998 22.0001 11.9998 22.0001C9.39977 22.0001 7.03977 21.0101 5.25977 19.3801C5.35977 18.4401 5.95977 17.5201 7.02977 16.8001C9.76977 14.9801 14.2498 14.9801 16.9698 16.8001C18.0398 17.5201 18.6398 18.4401 18.7398 19.3801Z"
+                                                        stroke="#292D32" stroke-width="1.5" stroke-linecap="round"
+                                                        stroke-linejoin="round"></path>
+                                                    <path
+                                                        d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
+                                                        stroke="#292D32" stroke-width="1.5" stroke-linecap="round"
+                                                        stroke-linejoin="round"></path>
+                                                </g>
+                                            </svg>
+                                            <div class="ml-3">
+                                                <p class="">
+                                                    <%= currentUser.FullName %>
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <% } %>
                                 </div>
                             </div>
 
