--- a/views/admin/attendence-list.ejs
+++ b/views/admin/attendence-list.ejs
@@ -248,7 +248,7 @@
                                                                             <h6 class="d-flex align-items-center">
                                                                                 <%= passRequest.sender.fullName %>
                                                                             </h6>
-                                                                            <p class="d-flex align-items-center">
+                                                                            <small class="d-flex align-items-center">
                                                                                 Hostel <%=
                                                                                     passRequest.sender.hostelInfo.hostelNo
                                                                                     %>
@@ -256,7 +256,8 @@
                                                                                     Room #
                                                                                     <%= passRequest.sender.hostelInfo.roomNo
                                                                                         %>
-                                                                            </p><small data-taskdate="08 Aug 2020"><svg
+                                                                            </small>
+                                                                            <small data-taskdate="08 Aug 2020"><svg
                                                                                     xmlns="http://www.w3.org/2000/svg"
                                                                                     width="14" height="14"
                                                                                     viewBox="0 0 24 24" fill="none" 3
