--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -696,7 +696,7 @@
                                                     </g>
                                                 </g>
                                             </svg>
-                                            <span>Change Sysem Key</span>
+                                            <span>Change System Key</span>
                                         </div>
                                     </a>
                                 </li>
