--- a/views/register/face-form.ejs
+++ b/views/register/face-form.ejs
@@ -1202,7 +1202,7 @@
 
                                     <div class="modal-footer">
                                         <button data-noOfDetections id="next" type="button"
-                                            class="btn btn-primary">next</button>
+                                            class="btn btn-primary">Start</button>
 
                                     </div>
 
