--- a/views/staff/login.ejs
+++ b/views/staff/login.ejs
@@ -100,11 +100,11 @@
     <script src="/assets/js/authentication/form-1.js"></script>
 
     <!-- Text -->
-    <script>
+    <!-- <script>
         document.getElementById('username').value = 'shahid';
         document.getElementById('password').value = '123';
         //document.getElementById('submit').click();
-    </script>
+    </script> -->
 
 </body>
 
