--- a/views/student/login.ejs
+++ b/views/student/login.ejs
@@ -74,10 +74,10 @@
 
                                     </div>
 
-                                    <div class="field-wrapper">
+                                    <!-- <div class="field-wrapper">
                                         <a href="auth_pass_recovery.html" class="forgot-pass-link">Forgot
                                             Password?</a>
-                                    </div>
+                                    </div> -->
 
                                 </div>
                             </form>
@@ -98,12 +98,6 @@
     <!-- END GLOBAL MANDATORY SCRIPTS -->
     <script src="/assets/js/authentication/form-1.js"></script>
 
-    <!-- Text -->
-    <script>
-        document.getElementById('username').value = 'aftabAlam';
-        document.getElementById('password').value = '123';
-        //document.getElementById('submit').click();
-    </script>
 
 </body>
 
