--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -72,10 +72,10 @@
 
                                     </div>
 
-                                    <div class="field-wrapper">
+                                    <!-- <div class="field-wrapper">
                                         <a href="auth_pass_recovery.html" class="forgot-pass-link">Forgot
                                             Password?</a>
-                                    </div>
+                                    </div> -->
 
                                 </div>
                             </form>
