--- a/views/error.ejs
+++ b/views/error.ejs
@@ -7,8 +7,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <title>Error 404 | CORK - Multipurpose Bootstrap Dashboard Template </title>
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico" />
+    <title>Error
+    </title>
+    <link rel="icon" type="image/x-icon" href="/hostel-files/logo/logo.png">
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -24,7 +25,7 @@
         <div class="row">
             <div class="col-md-4 mr-auto mt-5 text-md-left text-center">
                 <a href="index-2.html" class="ml-md-5">
-                    <img alt="image-404" src="/assets/img/logo2.svg" class="theme-logo">
+                    <img alt="image-404" src="/hostel-files/logo/logo.png" class="theme-logo">
                 </a>
             </div>
         </div>
